# typingchat

./: .gitignore  README.md  pyproject.toml
src/typingchat/: __init__.py  chat.py  core.py
